making it so strong

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     
         <form action="/" class="form-container">
             <div>
-                <label for="username"></label>
-            <input type="text" placeholder="Username" id="username" required>
+                <input type="text" placeholder="Username" id="username" required>
+                <label for="username" id="usernameLabel"></label>
             </div>
             <div>
-                <label for="name"></label>
-            <input type="name" placeholder="Full name" id="name" required>
+                <input type="name" placeholder="Full name" id="name" required>
+                <label for="name" id="nameLabel"></label>
             </div>
             <div>
-                <label for="mail"></label>
-            <input type="email" placeholder="@mail.com" id="mail" required>
+                <input type="email" placeholder="@mail.com" id="mail" required>
+                <label for="mail" id="mailLabel"></label>
             </div>
             <div>
-                <label for="phone"></label>
-            <input type="text" placeholder="Phone number" id="phone" required>
+                <input type="text" placeholder="Phone number" id="phone" required>
+                <label for="phone" id="phoneLabel"></label>
             </div>
             <div>
-                <label for="password"></label>
-            <input type="password" placeholder="Password" id="password" required>
+                <input type="password" placeholder="Password" id="password" required>
+                <label for="password" id="passwordLabel"></label>
             </div>
            <div>
-            <label for="confirmpassword"></label>
-            <input type="password" placeholder="Confirm Password" id="confirmpassword" required>
+               <input type="password" placeholder="Confirm Password" id="confirmpassword" required>
+               <label for="confirmpassword" id="confirmpasswordLabel"></label>
            </div>
             <button type="submit" id="submit-btn">Submit</button>
         </form>
